# heardle2

./: README.md  app.py  pyproject.toml
apps/: hello.py
heardle/: __init__.py  auth.py  game.py  spotify.py
heardle/main/: __init__.py  game.py  soundcloud.py  spotify.py
heardle/static/: game.js
heardle/templates/: base.html
heardle/templates/game/: play.html  search.html
heardle/util/: spotify.py
tests/: conftest.py  test_factory.py  test_search.py  test_spotify.py
